--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
-    "mongosh": "^1.1.2"
+    "mongosh": "^1.1.2",
+    "node": "^17.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
