--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "mongosh": "^1.1.2",
-    "node": "^17.1.0"
+    "node": "^17.1.0",
+    "npm": "^8.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
