--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "bugs": {
     "url": "https://github.com/srhmendez/book-tracker-app/issues"
   },
+  "engines": {
+    "node": ">= 16.11.1"
+  },
   "homepage": "https://github.com/srhmendez/book-tracker-app#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
