--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "url": "https://github.com/srhmendez/book-tracker-app/issues"
   },
   "engines": {
-    "node": ">= 16.11.1"
+    "node": ">= 16.11.1",
+    "npm": ".= 8.1.3"
   },
   "homepage": "https://github.com/srhmendez/book-tracker-app#readme",
   "dependencies": {
