--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "engines": {
     "node": ">= 16.11.1",
-    "npm": ".= 8.1.3"
+    "npm": ">= 8.1.3"
   },
   "homepage": "https://github.com/srhmendez/book-tracker-app#readme",
   "dependencies": {
