--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "book-tracker-app",
+  "name": "clear",
   "version": "1.0.0",
   "description": "### User Stories:  - As a user, I want to be able to search for books - As a user I want to be able to add books from my search results to my list of books to read, or books I have read - As a user, I want to track books I have read - As a user, I need to be able to rate books I have read - As a user, I want to be able to make a list of books I want to read",
   "main": "server.js",
@@ -24,9 +24,9 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.12",
-    "mongosh": "^1.1.2",
-    "node": "^17.1.0",
+    "mongoose": "^6.0.13",
+    "mongosh": "^0.0.1",
+    "node": "^8.0.0",
     "npm": "^8.1.3"
   },
   "devDependencies": {
