--- a/package.json
+++ b/package.json
@@ -1,9 +1,324 @@
 {
-  "name": "clear",
+  "name": "book-tracker-app",
   "version": "1.0.0",
-  "description": "### User Stories:  - As a user, I want to be able to search for books - As a user I want to be able to add books from my search results to my list of books to read, or books I have read - As a user, I want to track books I have read - As a user, I need to be able to rate books I have read - As a user, I want to be able to make a list of books I want to read",
+  "description": "Book tracking Application",
   "main": "server.js",
+  "dependencies": {
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.7",
+    "acorn": "^7.4.1",
+    "acorn-class-fields": "^0.3.7",
+    "acorn-numeric-separator": "^0.3.6",
+    "acorn-private-class-elements": "^0.2.7",
+    "acorn-private-methods": "^0.3.3",
+    "acorn-static-class-features": "^0.2.4",
+    "analytics-node": "^3.5.0",
+    "ansi-align": "^3.0.1",
+    "ansi-escape-sequences": "^5.1.2",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^3.2.1",
+    "anymatch": "^3.1.2",
+    "aproba": "^1.2.0",
+    "are-we-there-yet": "^1.1.7",
+    "array-back": "^4.0.2",
+    "array-flatten": "^1.1.1",
+    "askcharacter": "^1.0.0",
+    "askpassword": "^1.2.4",
+    "aws4": "^1.11.0",
+    "axios": "^0.21.4",
+    "axios-retry": "^3.2.4",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "binary-extensions": "^2.2.0",
+    "bindings": "^1.5.0",
+    "bl": "^2.2.1",
+    "body-parser": "^1.19.0",
+    "boxen": "^5.1.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.18.1",
+    "bson": "^4.5.4",
+    "buffer": "^5.7.1",
+    "bytes": "^3.1.0",
+    "cacheable-request": "^6.1.0",
+    "camelcase": "^6.2.1",
+    "caniuse-lite": "^1.0.30001282",
+    "chalk": "^2.4.2",
+    "charenc": "^0.0.2",
+    "chokidar": "^3.5.2",
+    "chownr": "^2.0.0",
+    "ci-info": "^2.0.0",
+    "cli-boxes": "^2.2.1",
+    "clone-response": "^1.0.2",
+    "code-point-at": "^1.1.0",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "commander": "^2.20.3",
+    "component-type": "^1.2.1",
+    "concat-map": "^0.0.1",
+    "config-chain": "^1.1.13",
+    "configstore": "^5.0.1",
+    "console-control-strings": "^1.1.0",
+    "content-disposition": "^0.5.3",
+    "content-type": "^1.0.4",
+    "convert-source-map": "^1.8.0",
+    "cookie": "^0.4.0",
+    "cookie-signature": "^1.0.6",
+    "core-util-is": "^1.0.3",
+    "cross-spawn": "^7.0.3",
+    "crypt": "^0.0.2",
+    "crypto-random-string": "^2.0.0",
+    "debug": "^2.6.9",
+    "decompress-response": "^4.2.1",
+    "deep-extend": "^0.6.0",
+    "defer-to-connect": "^1.1.3",
+    "delegates": "^1.0.0",
+    "denque": "^2.0.1",
+    "depd": "^1.1.2",
+    "destroy": "^1.0.4",
+    "detect-libc": "^1.0.3",
+    "dot-prop": "^5.3.0",
+    "dotenv": "^10.0.0",
+    "duplexer3": "^0.1.4",
+    "editorconfig": "^0.15.3",
+    "ee-first": "^1.1.1",
+    "electron-to-chromium": "^1.3.902",
+    "emoji-regex": "^8.0.0",
+    "emphasize": "^3.0.0",
+    "encodeurl": "^1.0.2",
+    "end-of-stream": "^1.4.4",
+    "escalade": "^3.1.1",
+    "escape-goat": "^2.1.1",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^4.0.0",
+    "etag": "^1.8.1",
+    "expand-template": "^2.0.3",
+    "express": "^4.17.1",
+    "fault": "^1.0.4",
+    "file-uri-to-path": "^1.0.0",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.1.2",
+    "follow-redirects": "^1.14.5",
+    "format": "^0.2.2",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "fs-constants": "^1.0.0",
+    "fs-minipass": "^2.1.0",
+    "fs.realpath": "^1.0.0",
+    "fsevents": "^2.3.2",
+    "gauge": "^2.7.4",
+    "gensync": "^1.0.0-beta.2",
+    "get-stream": "^4.1.0",
+    "github-from-package": "^0.0.0",
+    "glob": "^7.2.0",
+    "glob-parent": "^5.1.2",
+    "global-dirs": "^3.0.0",
+    "globals": "^11.12.0",
+    "got": "^9.6.0",
+    "graceful-fs": "^4.2.8",
+    "handle-backspaces": "^1.0.0",
+    "has-flag": "^3.0.0",
+    "has-unicode": "^2.0.1",
+    "has-yarn": "^2.1.0",
+    "highlight.js": "^9.12.0",
+    "hijack-stream": "^1.0.0",
+    "http-cache-semantics": "^4.1.0",
+    "http-errors": "^1.7.2",
+    "iconv-lite": "^0.4.24",
+    "ieee754": "^1.2.1",
+    "ignore-by-default": "^1.0.1",
+    "import-lazy": "^2.1.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.3",
+    "ini": "^1.3.8",
+    "ipaddr.js": "^1.9.1",
+    "ipv6-normalize": "^1.0.1",
+    "is-binary-path": "^2.1.0",
+    "is-buffer": "^1.1.6",
+    "is-ci": "^2.0.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^1.0.0",
+    "is-glob": "^4.0.3",
+    "is-installed-globally": "^0.4.0",
+    "is-npm": "^5.0.0",
+    "is-number": "^7.0.0",
+    "is-obj": "^2.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-recoverable-error": "^1.0.2",
+    "is-retry-allowed": "^2.2.0",
+    "is-typedarray": "^1.0.0",
+    "is-yarn-global": "^0.3.0",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "joi": "^17.4.2",
+    "join-component": "^1.1.0",
+    "js-beautify": "^1.14.0",
+    "js-tokens": "^4.0.0",
+    "jsesc": "^2.5.2",
+    "json-buffer": "^3.0.0",
+    "json5": "^2.2.0",
+    "kareem": "^2.3.2",
+    "kerberos": "^2.0.0-beta.0",
+    "keyv": "^3.1.0",
+    "latest-version": "^5.1.0",
+    "lodash": "^4.17.21",
+    "lodash.isstring": "^4.0.1",
+    "lodash.set": "^4.3.2",
+    "lowercase-keys": "^1.0.1",
+    "lowlight": "^1.9.2",
+    "lru-cache": "^4.1.5",
+    "macos-export-certificate-and-key": "^1.0.2",
+    "make-dir": "^3.1.0",
+    "md5": "^2.3.0",
+    "media-typer": "^0.3.0",
+    "memory-pager": "^1.5.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.51.0",
+    "mime-types": "^2.1.34",
+    "mimic-response": "^2.1.0",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.5",
+    "minipass": "^3.1.5",
+    "minizlib": "^2.1.2",
+    "mkdirp": "^1.0.4",
+    "mkdirp-classic": "^0.5.3",
+    "mongodb": "^4.1.4",
+    "mongodb-ace-autocompleter": "^0.8.0",
+    "mongodb-build-info": "^1.2.0",
+    "mongodb-client-encryption": "^2.0.0-beta.0",
+    "mongodb-connection-string-url": "^2.2.0",
+    "mongodb-log-writer": "^1.1.2",
+    "mongodb-redact": "^0.2.2",
+    "mongoose": "^6.0.13",
+    "mongosh": "^1.1.2",
+    "mpath": "^0.8.4",
+    "mquery": "^4.0.0",
+    "ms": "^2.0.0",
+    "mustache": "^4.2.0",
+    "nanoassert": "^1.1.0",
+    "nanobus": "^4.5.0",
+    "nanoscheduler": "^1.0.3",
+    "nanotiming": "^7.3.1",
+    "napi-build-utils": "^1.0.2",
+    "negotiator": "^0.6.2",
+    "node": "^17.1.0",
+    "node-abi": "^2.30.1",
+    "node-addon-api": "^3.2.1",
+    "node-bin-setup": "^1.0.6",
+    "node-fetch": "^2.6.6",
+    "node-releases": "^2.0.1",
+    "nodemon": "^2.0.15",
+    "noop-logger": "^0.1.1",
+    "nopt": "^5.0.0",
+    "normalize-path": "^3.0.0",
+    "normalize-url": "^4.5.1",
+    "npm": "^8.1.4",
+    "npmlog": "^4.1.2",
+    "number-is-nan": "^1.0.1",
+    "object-assign": "^4.1.1",
+    "on-finished": "^2.3.0",
+    "once": "^1.4.0",
+    "os-dns-native": "^1.0.4",
+    "p-cancelable": "^1.1.0",
+    "package-json": "^6.5.0",
+    "parseurl": "^1.3.3",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-to-regexp": "^0.1.7",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.0",
+    "prebuild-install": "^6.1.2",
+    "prepend-http": "^2.0.0",
+    "pretty-bytes": "^5.6.0",
+    "pretty-repl": "^3.1.1",
+    "process-nextick-args": "^2.0.1",
+    "proto-list": "^1.2.4",
+    "proxy-addr": "^2.0.7",
+    "pseudomap": "^1.0.2",
+    "pstree.remy": "^1.1.8",
+    "pump": "^3.0.0",
+    "punycode": "^2.1.1",
+    "pupa": "^2.1.1",
+    "qs": "^6.7.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.4.0",
+    "rc": "^1.2.8",
+    "readable-stream": "^2.3.7",
+    "readdirp": "^3.6.0",
+    "regenerator-runtime": "^0.13.9",
+    "regexp-clone": "^1.0.0",
+    "registry-auth-token": "^4.2.1",
+    "registry-url": "^5.1.0",
+    "remove-array-items": "^1.1.1",
+    "remove-trailing-slash": "^0.1.1",
+    "resolve-mongodb-srv": "^1.1.0",
+    "responselike": "^1.0.2",
+    "safe-buffer": "^5.1.2",
+    "safer-buffer": "^2.1.2",
+    "saslprep": "^1.0.4",
+    "semver": "^7.3.5",
+    "semver-diff": "^3.1.1",
+    "send": "^0.17.1",
+    "serve-static": "^1.14.1",
+    "set-blocking": "^2.0.0",
+    "setprototypeof": "^1.1.1",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "sift": "^13.5.2",
+    "sigmund": "^1.0.1",
+    "signal-exit": "^3.0.6",
+    "simple-concat": "^1.0.1",
+    "simple-get": "^3.1.0",
+    "sliced": "^1.0.1",
+    "source-map": "^0.5.7",
+    "sparse-bitfield": "^3.0.3",
+    "statuses": "^1.5.0",
+    "string_decoder": "^1.1.1",
+    "string-width": "^1.0.2",
+    "strip-ansi": "^6.0.1",
+    "strip-json-comments": "^2.0.1",
+    "supports-color": "^5.5.0",
+    "tar": "^6.1.11",
+    "tar-fs": "^2.1.1",
+    "tar-stream": "^2.2.0",
+    "text-table": "^0.2.0",
+    "to-fast-properties": "^2.0.0",
+    "to-readable-stream": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.0",
+    "touch": "^3.1.0",
+    "tr46": "^3.0.0",
+    "tunnel-agent": "^0.6.0",
+    "type-detect": "^4.0.8",
+    "type-fest": "^0.20.2",
+    "type-is": "^1.6.18",
+    "typedarray-to-buffer": "^3.1.5",
+    "undefsafe": "^2.0.5",
+    "unique-string": "^2.0.0",
+    "unpipe": "^1.0.0",
+    "update-notifier": "^5.1.0",
+    "url-parse-lax": "^3.0.0",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "uuid": "^3.4.0",
+    "vary": "^1.1.2",
+    "webidl-conversions": "^7.0.0",
+    "whatwg-url": "^11.0.0",
+    "which": "^2.0.2",
+    "wide-align": "^1.1.5",
+    "widest-line": "^3.1.0",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^3.0.3",
+    "xdg-basedir": "^4.0.0",
+    "yallist": "^2.1.2",
+    "yargs-parser": "^20.2.9"
+  },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
@@ -15,21 +330,5 @@
   "bugs": {
     "url": "https://github.com/srhmendez/book-tracker-app/issues"
   },
-  "engines": {
-    "node": ">= 16.11.1",
-    "npm": ">= 8.0.0"
-  },
-  "homepage": "https://github.com/srhmendez/book-tracker-app#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^6.0.13",
-    "mongosh": "^0.0.1",
-    "node": "^8.0.0",
-    "npm": "^8.1.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+  "homepage": "https://github.com/srhmendez/book-tracker-app#readme"
 }
